# things3-ai

./: .env.template  .gitignore  README.md  pyproject.toml  things  things-mcp-setup.md
.github/workflows/: ci.yml
docs/: conversation-log.md  intake-reconstruction-spec.md  reconstruction-workflow-v1.md  roadmap.md  task-processing-workflow-v1.md  things-cli-spec.md
prompts/: task-ai-polish.md
src/things_ai/: __init__.py  cli.py  control.py  inbox_review.py  intake.py  llm_bridge.py  mcp.py  snapshot.py  tasks.py
tests/: test_control.py  test_inbox_review.py  test_intake.py  test_llm_bridge.py  test_snapshot.py  test_tasks.py  test_wrapper.py
