[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "things3-ai"
version = "0.1.0"
description = "Things 3 helpers built on top of things-mcp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
things = "things_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]